syntax = "proto3";

package test;

import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

option (scalapb.options) = {
  primitive_wrappers: true
};

message TestPB3 {
    string name = 1;
    google.protobuf.Int32Value intValue = 2;
    google.protobuf.Int64Value longValue = 4;
    google.protobuf.UInt64Value unsignedLongValue = 5;
    google.protobuf.FloatValue floatValue = 6;
    google.protobuf.DoubleValue doubleValue = 7;
    google.protobuf.BoolValue boolValue = 8;
    google.protobuf.StringValue stringValue = 9;
    google.protobuf.BytesValue bytesValue = 10;
    google.protobuf.Timestamp birth = 11;
    google.protobuf.Duration blink = 12;
}